<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    				<LinearLayout
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content" 
	                    android:orientation="horizontal">
					
	                    <TextView
	                        android:id="@+id/second1"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/type" />

	                    <RadioGroup
	                        android:id="@+id/second_RG1"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:orientation="vertical" >

	                        <RadioButton
	                            android:id="@+id/s_f_RG1"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:text="@string/clothes" />

	                        <RadioButton
	                            android:id="@+id/s_f_RG2"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:text="@string/cosmetics" />

	                        <RadioButton
	                            android:id="@+id/s_f_RG3"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:text="@string/shipin" />

	                        <RadioButton
	                            android:id="@+id/s_f_RG4"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:text="@string/shoes" />

	                        <RadioButton
	                            android:id="@+id/s_f_RG5"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:text="@string/food" />
	                    </RadioGroup>

						 </LinearLayout>
						 
    				<LinearLayout
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content" 
	                    android:orientation="horizontal">
						<TextView
	                        android:id="@+id/second2"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/address" />
	                    <RadioGroup
	                        android:id="@+id/second_RG2"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="center_horizontal"
	                        android:orientation="vertical" >

	            		<RadioButton
	            		    android:id="@+id/s_s_RG1"
	            		    android:layout_width="wrap_content"
	            		    android:layout_height="wrap_content"
	            		    android:text="@string/address1" />

	            		<RadioButton
	            		    android:id="@+id/s_s_RG2"
	            		    android:layout_width="wrap_content"
	            		    android:layout_height="wrap_content"
	            		    android:text="@string/address2"/>
	            		<RadioButton
	            		    android:id="@+id/s_s_RG3"
	            		    android:layout_width="wrap_content"
	            		    android:layout_height="wrap_content"
	            		    android:text="@string/address3"/>
	            		<RadioButton
	            		    android:id="@+id/s_s_RG4"
	            		    android:layout_width="wrap_content"
	            		    android:layout_height="wrap_content"
	            		    android:text="@string/address4"/>
	            		</RadioGroup>
	            		</LinearLayout>
	                    
	      	         <LinearLayout
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content" 
	                    android:orientation="horizontal">
	                    <TextView
	                        android:id="@+id/second3"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/addresss" />
	                    <RadioGroup
	                        android:id="@+id/second_RG3"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="center_horizontal"
	                        android:orientation="vertical" >
	            		<RadioButton
	            		    android:id="@+id/s_t_RG1"
	            		    android:layout_width="wrap_content"
	            		    android:layout_height="wrap_content"
	            		    android:text="@string/address5"/>
	            		<RadioButton
	            		    android:id="@+id/s_t_RG2"
	            		    android:layout_width="wrap_content"
	            		    android:layout_height="wrap_content"
	            		    android:text="@string/address6"/>
	            		</RadioGroup>	  
	            		</LinearLayout>
	                    
	            		<LinearLayout
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content" 
	                    android:orientation="horizontal">
	                    <TextView
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/timeLimit" />
	                    <EditText
	                        android:id="@+id/second_inputTime"
	                        android:layout_width="wrap_content"
	            		    android:layout_height="wrap_content"
	            		    android:numeric="integer"
	            		    android:textSize="15sp"/>     
	            		<TextView
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/hours" />         
						</LinearLayout>
						<LinearLayout
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content" 
	                    android:layout_marginTop="20dp"
	                    android:orientation="horizontal">
						<Button
	                        android:id="@+id/home_ok"
	                        android:layout_width="wrap_content"
	            		    android:layout_height="30dp"
	            		    android:background="#FFA500"
	            		    android:text="@string/OK">
	                    </Button>
	                
	                    <Button
	                        android:id="@+id/home_cancel"
	                        android:layout_width="wrap_content"
	            		    android:layout_height="30dp"
	            		    android:background="#FFA500"
	            		    android:layout_marginLeft="40dp"
	            		    android:text="@string/login_cancel">
	                    </Button>
	                    </LinearLayout>
                   

</LinearLayout>
