<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#B0E0E6">
    
    
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/login_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/login_student_id"
                android:textColor="#000"
                android:textSize="17sp" 
                android:background="#B0E0E6"/>

            <EditText
                android:id="@+id/login_accE"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/login_acc"
                android:background="@null"
                android:textSize="15sp" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginTop="14dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/login_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/login_pwd"
                android:textColor="#000"
                android:textSize="17sp" 
                android:background="#B0E0E6"/>

            <EditText
                android:id="@+id/login_pwE"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/login_pw"
                android:background="@null"
                android:textSize="15sp" />
        </RelativeLayout>
        
        <Button
            android:id="@+id/login_login"
            android:layout_width="fill_parent"
            android:layout_height="35dp" 
            android:layout_marginTop="30dp"
            android:text="@string/login_login"
            android:textColor="#000000"
            android:gravity="center"
            android:background="#4169E1" />
         <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
            android:id="@+id/login_register"
            android:layout_width="100dp"
            android:layout_height="30dp" 
            android:layout_marginTop="30dp"
            android:text="@string/login_register"
            android:gravity="left"
            android:textColor="#000000"
            android:layout_marginRight="150dp"
            android:background="#B0E0E6" />

            <Button
                android:id="@+id/login_forgetpwd"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:gravity="left"
                android:background="#B0E0E6"
                android:text="@string/login_forgetpwd"
                android:textColor="#000000" />

        </LinearLayout>

</LinearLayout>
