<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#EEE8AA">
    
    
    
    <RelativeLayout
        android:id="@+id/editRel_r"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/accountRel_r"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/account_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/login_student_id"
                android:textColor="#000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/accountEdittext_r"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dip"
                android:layout_toEndOf="@id/account_r"
                android:background="@null"
                android:hint="@string/login_student_id"
                android:textSize="15sp" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/phonenumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountRel_r"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/numTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/login_phonenumber"
                android:textColor="#000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/numEdittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dip"
                android:layout_toEndOf="@id/numTextView"
                android:background="@null"
                android:digits="1234567890"
                android:hint="@string/login_phonenumber"
                android:textSize="15sp" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phonenumber"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/login_password"
                android:textColor="#000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/passwordEdittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dip"
                android:layout_toEndOf="@id/passwordTextView"
                android:background="@null"
                android:hint="@string/login_password"
                android:password="true"
                android:textSize="15sp" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/ensurePassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/ensurePasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/login_ensurePassword"
                android:textColor="#000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/ensurePasswordEdittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dip"
                android:layout_toEndOf="@id/ensurePasswordTextView"
                android:background="@null"
                android:hint="@string/login_ensurePassword"
                android:password="true"
                android:textSize="15sp" />
        </RelativeLayout>
        
       </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel_r"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"   
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_cancel"
            android:textColor="#000000"
            android:background="#4169E1" />

        <Button
            android:id="@+id/register_r"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="#4169E1"
            android:text="@string/login_register"
            android:textColor="#000000" />

    </LinearLayout>

</LinearLayout>
